fixed tabbar scrollbar bug in firefox

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -82,6 +82,7 @@
   flex-direction: row;
   padding: 8px;
   overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 .tabbar__btns::-webkit-scrollbar {
